[GPUP] Test WebKit2.CrashGPUProcessAfterApplyingConstraints fails when Media in GPU Process is enabled https://bugs.webkit.org/show_bug.cgi?id=228759 <rdar://problem/81529641>

Reviewed by Geoffrey Garen.

Source/WebCore:

Revert part of https://trac.webkit.org/changeset/279940/webkit.

* platform/mediastream/RealtimeVideoSource.cpp:
(WebCore::RealtimeVideoSource::sourceSettingsChanged):
Covered by API test.

Tools:

* TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
Reenable test.


Canonical link: https://commits.webkit.org/240319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280732 268f45cc-cd09-0410-ab3c-d52691b4dbfc